modified:   .gitignore 	modified:   Code/.DS_Store 	modified:   Code/00_data_stock_returns.ipynb 	modified:   Code/01_data_factors_rf_mkt.ipynb 	modified:   Code/02_data_indecies.ipynb 	modified:   Code/03_finalizing_data.ipynb 	renamed:    Code/11_bab_replication.ipynb -> Code/04_bab_replication.ipynb 	new file:   Code/05_max_replication.ipynb 	renamed:    Code/10_umd_replication.ipynb -> Code/06_umd_replication.ipynb 	new file:   Code/09_pre_data_statistics.ipynb 	new file:   Code/10_volatility_managed_factors.ipynb 	new file:   Code/11_volatility_managed_portfolios.ipynb 	deleted:    Code/12_pre_data_statistics.ipynb 	new file:   Code/12_volatility_statistics.ipynb 	renamed:    Code/30_data_statistics.ipynb -> Code/13_data_statistics.ipynb 	deleted:    Code/20_volatility_managed_factors.ipynb 	deleted:    Code/21_volatility_managed_portfolios.ipynb 	deleted:    Code/22_volatility_statistics.ipynb 	modified:   Code/99_functions.ipynb 	modified:   Code/99_run_all.ipynb 	new file:   Code/Appendix_change_leverage.ipynb 	new file:   Code/Appendix_changing_gamma.ipynb 	new file:   Code/Appendix_removing_factors.ipynb 	new file:   Code/Appendix_splitting_periods.ipynb 	modified:   Code/Plots/.DS_Store 	modified:   Code/Plots/avg_risk-ret_during_diff_factorvol.png 	modified:   Code/Plots/avg_risk-ret_during_diff_factorvol_insample.png 	modified:   Code/Plots/avg_risk-ret_during_diff_marketvol.png 	modified:   Code/Plots/avg_risk-ret_during_diff_marketvol_insample.png 	modified:   Code/Plots/corrmatrix.png 	modified:   Code/Plots/cum_ret.png 	modified:   Code/Plots/cum_ret_periods.png 	modified:   Code/Plots/cumulative_returns_factors.png 	modified:   Code/Plots/cumulative_returns_ptfs.png 	modified:   Code/Plots/drawdowns_MV.png 	modified:   Code/Plots/histograms_voltimed_factors_mkt.png 	new file:   Code/Plots/weights_CMV_fac.png 	new file:   Code/Plots/weights_CMV_mkt.png 	new file:   Code/Plots/weights_ind_factors_ptf.png 	new file:   Code/Plots/weights_ind_factors_pt

--- a/Code/04_bab_replication.ipynb
+++ b/Code/04_bab_replication.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "f56ead0d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:24.416240Z",
-     "iopub.status.busy": "2025-03-04T15:20:24.415958Z",
-     "iopub.status.idle": "2025-03-04T15:20:24.635404Z",
-     "shell.execute_reply": "2025-03-04T15:20:24.635104Z"
+     "iopub.execute_input": "2025-03-19T10:54:23.846636Z",
+     "iopub.status.busy": "2025-03-19T10:54:23.846211Z",
+     "iopub.status.idle": "2025-03-19T10:54:24.071818Z",
+     "shell.execute_reply": "2025-03-19T10:54:24.071552Z"
     },
     "papermill": {
-     "duration": 0.225883,
-     "end_time": "2025-03-04T15:20:24.636375",
+     "duration": 0.233392,
+     "end_time": "2025-03-19T10:54:24.072696",
      "exception": false,
-     "start_time": "2025-03-04T15:20:24.410492",
+     "start_time": "2025-03-19T10:54:23.839304",
      "status": "completed"
     },
     "tags": []
@@ -49,20 +49,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "87b0f714",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:24.639220Z",
-     "iopub.status.busy": "2025-03-04T15:20:24.639079Z",
-     "iopub.status.idle": "2025-03-04T15:20:25.814788Z",
-     "shell.execute_reply": "2025-03-04T15:20:25.814517Z"
+     "iopub.execute_input": "2025-03-19T10:54:24.075463Z",
+     "iopub.status.busy": "2025-03-19T10:54:24.075311Z",
+     "iopub.status.idle": "2025-03-19T10:54:25.276253Z",
+     "shell.execute_reply": "2025-03-19T10:54:25.275976Z"
     },
     "papermill": {
-     "duration": 1.177946,
-     "end_time": "2025-03-04T15:20:25.815633",
+     "duration": 1.203338,
+     "end_time": "2025-03-19T10:54:25.277271",
      "exception": false,
-     "start_time": "2025-03-04T15:20:24.637687",
+     "start_time": "2025-03-19T10:54:24.073933",
      "status": "completed"
     },
     "tags": []
@@ -108,10 +108,10 @@
    "id": "ad519491",
    "metadata": {
     "papermill": {
-     "duration": 0.000921,
-     "end_time": "2025-03-04T15:20:25.817818",
+     "duration": 0.000894,
+     "end_time": "2025-03-19T10:54:25.279530",
      "exception": false,
-     "start_time": "2025-03-04T15:20:25.816897",
+     "start_time": "2025-03-19T10:54:25.278636",
      "status": "completed"
     },
     "tags": []
@@ -129,20 +129,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "8491cbe1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:25.819778Z",
-     "iopub.status.busy": "2025-03-04T15:20:25.819677Z",
-     "iopub.status.idle": "2025-03-04T15:20:27.079047Z",
-     "shell.execute_reply": "2025-03-04T15:20:27.077939Z"
+     "iopub.execute_input": "2025-03-19T10:54:25.281502Z",
+     "iopub.status.busy": "2025-03-19T10:54:25.281292Z",
+     "iopub.status.idle": "2025-03-19T10:54:26.356938Z",
+     "shell.execute_reply": "2025-03-19T10:54:26.356174Z"
     },
     "papermill": {
-     "duration": 1.263747,
-     "end_time": "2025-03-04T15:20:27.082333",
+     "duration": 1.079276,
+     "end_time": "2025-03-19T10:54:26.359538",
      "exception": false,
-     "start_time": "2025-03-04T15:20:25.818586",
+     "start_time": "2025-03-19T10:54:25.280262",
      "status": "completed"
     },
     "tags": []
@@ -181,20 +181,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "af8cb5ed",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:27.089933Z",
-     "iopub.status.busy": "2025-03-04T15:20:27.089723Z",
-     "iopub.status.idle": "2025-03-04T15:20:27.459061Z",
-     "shell.execute_reply": "2025-03-04T15:20:27.458785Z"
+     "iopub.execute_input": "2025-03-19T10:54:26.366623Z",
+     "iopub.status.busy": "2025-03-19T10:54:26.366390Z",
+     "iopub.status.idle": "2025-03-19T10:54:26.689283Z",
+     "shell.execute_reply": "2025-03-19T10:54:26.689007Z"
     },
     "papermill": {
-     "duration": 0.372388,
-     "end_time": "2025-03-04T15:20:27.460019",
+     "duration": 0.325546,
+     "end_time": "2025-03-19T10:54:26.690181",
      "exception": false,
-     "start_time": "2025-03-04T15:20:27.087631",
+     "start_time": "2025-03-19T10:54:26.364635",
      "status": "completed"
     },
     "tags": []
@@ -223,20 +223,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "a6594040",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:27.462918Z",
-     "iopub.status.busy": "2025-03-04T15:20:27.462758Z",
-     "iopub.status.idle": "2025-03-04T15:20:27.466025Z",
-     "shell.execute_reply": "2025-03-04T15:20:27.465664Z"
+     "iopub.execute_input": "2025-03-19T10:54:26.692864Z",
+     "iopub.status.busy": "2025-03-19T10:54:26.692756Z",
+     "iopub.status.idle": "2025-03-19T10:54:26.695551Z",
+     "shell.execute_reply": "2025-03-19T10:54:26.695267Z"
     },
     "papermill": {
-     "duration": 0.005387,
-     "end_time": "2025-03-04T15:20:27.466782",
+     "duration": 0.004777,
+     "end_time": "2025-03-19T10:54:26.696240",
      "exception": false,
-     "start_time": "2025-03-04T15:20:27.461395",
+     "start_time": "2025-03-19T10:54:26.691463",
      "status": "completed"
     },
     "tags": []
@@ -261,27 +261,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "ee9e0626",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:27.469045Z",
-     "iopub.status.busy": "2025-03-04T15:20:27.468928Z",
-     "iopub.status.idle": "2025-03-04T15:20:34.277159Z",
-     "shell.execute_reply": "2025-03-04T15:20:34.276513Z"
+     "iopub.execute_input": "2025-03-19T10:54:26.698183Z",
+     "iopub.status.busy": "2025-03-19T10:54:26.698095Z",
+     "iopub.status.idle": "2025-03-19T10:54:32.851208Z",
+     "shell.execute_reply": "2025-03-19T10:54:32.850437Z"
     },
     "papermill": {
-     "duration": 6.811373,
-     "end_time": "2025-03-04T15:20:34.279203",
+     "duration": 6.156865,
+     "end_time": "2025-03-19T10:54:32.853962",
      "exception": false,
-     "start_time": "2025-03-04T15:20:27.467830",
+     "start_time": "2025-03-19T10:54:26.697097",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "### Using monthly weights to get the daily weights\n",
+    "### Using monthly weights to get the daily returns\n",
     "wH_d = pd.DataFrame(index=stock_ret_d.index, columns=stock_ret_d.columns)\n",
     "wL_d = pd.DataFrame(index=stock_ret_d.index, columns=stock_ret_d.columns)\n",
     "beta_d = pd.DataFrame(index=stock_ret_d.index, columns=stock_ret_d.columns)\n",
@@ -300,60 +300,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "479bc02b",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:34.283930Z",
-     "iopub.status.busy": "2025-03-04T15:20:34.283738Z",
-     "iopub.status.idle": "2025-03-04T15:20:34.286090Z",
-     "shell.execute_reply": "2025-03-04T15:20:34.285852Z"
-    },
-    "papermill": {
-     "duration": 0.005024,
-     "end_time": "2025-03-04T15:20:34.286880",
-     "exception": false,
-     "start_time": "2025-03-04T15:20:34.281856",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# ### Getting the scaled weights\n",
-    "# wH_m_scaled = wH_m.replace(0, np.nan).div(beta_m.mul(wH_m, axis=1).sum(axis=1).replace(0, np.nan), axis=0)\n",
-    "# wL_m_scaled = wL_m.replace(0, np.nan).div(beta_m.mul(wL_m, axis=1).sum(axis=1).replace(0, np.nan), axis=0)\n",
-    "# w_scaled = wL_m_scaled.fillna(-wH_m_scaled)\n",
-    "\n",
-    "### Getting the volatility\n",
-    "# volatility['BAB'] = np.nan\n",
-    "# for month in factor_ret_m.index:\n",
-    "    # w = w_scaled.loc[month].replace(np.nan, 0)\n",
-    "    # ret = stock_ret_d.loc[month.strftime('%Y-%m')]\n",
-    "    # cov = ret.cov().replace(np.nan, 0)\n",
-    "    # volatility.loc[month, 'BAB'] = np.sqrt(abs(np.dot(w, np.dot(cov, w)))) * np.sqrt(252)\n",
-    "#     volatility.loc[month, 'BAB'] = exc_ret_bab_d.loc[month.strftime('%Y-%m')].std() * np.sqrt(252)\n",
-    "\n",
-    "# volatility = volatility.replace(0, np.nan)\n",
-    "# volatility"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "0a1c17c5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-04T15:20:34.289013Z",
-     "iopub.status.busy": "2025-03-04T15:20:34.288910Z",
-     "iopub.status.idle": "2025-03-04T15:20:34.340832Z",
-     "shell.execute_reply": "2025-03-04T15:20:34.340557Z"
+     "iopub.execute_input": "2025-03-19T10:54:32.859890Z",
+     "iopub.status.busy": "2025-03-19T10:54:32.859616Z",
+     "iopub.status.idle": "2025-03-19T10:54:32.960525Z",
+     "shell.execute_reply": "2025-03-19T10:54:32.960118Z"
     },
     "papermill": {
-     "duration": 0.053845,
-     "end_time": "2025-03-04T15:20:34.341652",
+     "duration": 0.104242,
+     "end_time": "2025-03-19T10:54:32.961446",
      "exception": false,
-     "start_time": "2025-03-04T15:20:34.287807",
+     "start_time": "2025-03-19T10:54:32.857204",
      "status": "completed"
     },
     "tags": []
@@ -393,14 +353,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 11.439753,
-   "end_time": "2025-03-04T15:20:35.266673",
+   "duration": 10.770933,
+   "end_time": "2025-03-19T10:54:33.887347",
    "environment_variables": {},
    "exception": null,
-   "input_path": "11_bab_replication.ipynb",
-   "output_path": "11_bab_replication.ipynb",
+   "input_path": "04_bab_replication.ipynb",
+   "output_path": "04_bab_replication.ipynb",
    "parameters": {},
-   "start_time": "2025-03-04T15:20:23.826920",
+   "start_time": "2025-03-19T10:54:23.116414",
    "version": "2.6.0"
   }
  },
