--- a/Code/99_functions.ipynb
+++ b/Code/99_functions.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ptf_weights(ret, negative=True, type=\"MVP\", target=0, rf=0, gamma=1, wanted_weight=\"tangency\", return_weights = 'equal', shirinkage = False):\n",
+    "def ptf_weights(ret, negative=True, type=\"MVP\", target=0, rf=0, gamma=1, wanted_weight=\"tangency\", max_weight = 999):\n",
     "    \"\"\"\n",
     "    This function calculates the weights of the Minimum Variance Portfolio (MVP) or the Global Minimum Variance Portfolio (GMV).\n",
     "\n",
@@ -96,7 +96,7 @@
     "            init_guess = np.ones(len(mu)) / len(mu)\n",
     "\n",
     "            # Define the bounds (0 <= weight <= 999)\n",
-    "            bounds = tuple((0, 999) for _ in range(len(ret.columns)))\n",
+    "            bounds = tuple((0, max_weight) for _ in range(len(ret.columns)))\n",
     "\n",
     "            # Minimize the objective function\n",
     "            results = minimize(objective, init_guess, bounds=bounds, method='SLSQP')\n",
@@ -147,7 +147,7 @@
     "            intial_guess = np.ones(len(V)) / len(V)\n",
     "\n",
     "            # Define the bounds (0 <= weight <= 999)\n",
-    "            bounds = tuple((0, 999) for _ in range(len(V)))\n",
+    "            bounds = tuple((0, max_weight) for _ in range(len(V)))\n",
     "\n",
     "            # Minimize the objective function\n",
     "            results = minimize(objective, intial_guess, args=(V,), constraints=constraints, bounds=bounds, method='SLSQP')\n",
@@ -202,49 +202,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@njit\n",
-    "def stationary_bootstrap(data: np.ndarray, m: float, sample_length: int) -> np.ndarray:\n",
-    "    \"\"\"\n",
-    "    This function performs stationary bootstrap resampling on the input data.\n",
+    "# from numba import njit\n",
+    "# import numpy as np\n",
     "\n",
-    "    Parameters:\n",
-    "    data (np.ndarray): The input data array to be resampled.\n",
-    "    m (float): The average block length.\n",
-    "    sample_length (int): The length of the resampled output.\n",
+    "# @njit\n",
+    "# def stationary_bootstrap(data: np.ndarray, m: float, sample_length: int) -> np.ndarray:\n",
+    "#     \"\"\"\n",
+    "#     This function performs stationary bootstrap resampling on the input data.\n",
     "\n",
-    "    Returns:\n",
-    "    np.ndarray: The resampled data array.\n",
-    "    \"\"\"\n",
+    "#     Parameters:\n",
+    "#     data (np.ndarray): The input data array to be resampled.\n",
+    "#     m (float): The average block length.\n",
+    "#     sample_length (int): The length of the resampled output.\n",
     "\n",
-    "    # Calculate the acceptance probability\n",
-    "    accept = 1 / m \n",
-    "    data_length = data.shape[0]\n",
+    "#     Returns:\n",
+    "#     np.ndarray: The resampled data array.\n",
+    "#     \"\"\"\n",
     "\n",
-    "    # Initialize the starting index for the sample\n",
-    "    sample_index = np.random.randint(0, high=data_length, size=1)[0]\n",
-    "    sample = np.zeros((sample_length,))\n",
+    "#     # Calculate the acceptance probability\n",
+    "#     accept = 1 / m \n",
+    "#     data_length = data.shape[0]\n",
     "\n",
-    "    # Loop through each sample point\n",
-    "    for i_sample in range(sample_length):\n",
-    "        # Decide whether to continue the current block or start a new one\n",
-    "        if np.random.uniform(0, 1, 1) >= accept:\n",
-    "            sample_index += 1\n",
-    "            # Wrap around if the index exceeds the data length\n",
-    "            if sample_index >= data_length:\n",
-    "                sample_index = 0        \n",
-    "        else:\n",
-    "            # Start a new block with a random index\n",
-    "            sample_index = np.random.randint(0, high=data_length, size=1)[0]\n",
+    "#     # Initialize the starting index for the sample\n",
+    "#     sample_index = np.random.randint(0, high=data_length, size=1)[0]\n",
+    "#     sample = np.zeros((sample_length,))\n",
     "\n",
-    "        # Assign the selected data point to the sample\n",
-    "        sample[i_sample] = data[sample_index]\n",
+    "#     # Loop through each sample point\n",
+    "#     for i_sample in range(sample_length):\n",
+    "#         # Decide whether to continue the current block or start a new one\n",
+    "#         if np.random.uniform(0, 1, 1) >= accept:\n",
+    "#             sample_index += 1\n",
+    "#             # Wrap around if the index exceeds the data length\n",
+    "#             if sample_index >= data_length:\n",
+    "#                 sample_index = 0        \n",
+    "#         else:\n",
+    "#             # Start a new block with a random index\n",
+    "#             sample_index = np.random.randint(0, high=data_length, size=1)[0]\n",
     "\n",
-    "    return sample"
+    "#         # Assign the selected data point to the sample\n",
+    "#         sample[i_sample] = data[sample_index]\n",
+    "\n",
+    "#     return sample"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,52 +255,44 @@
     "import numpy as np\n",
     "\n",
     "@njit\n",
-    "def stationary_bootstrap_multivariate(data: np.ndarray, m: float, sample_length: int) -> np.ndarray:\n",
+    "def stationary_bootstrap(data: np.ndarray, m: float, sample_length: int) -> np.ndarray:\n",
     "    \"\"\"\n",
-    "    Performs stationary bootstrap resampling on time series data.\n",
-    "    Handles both univariate (1D) and multivariate (2D) arrays.\n",
-    "    \n",
-    "    Parameters:\n",
-    "      data (np.ndarray): Time series data. If univariate, shape (n_obs,).\n",
-    "                         If multivariate, shape (n_obs, n_series).\n",
-    "      m (float): Average block length.\n",
-    "      sample_length (int): Length of the resampled output.\n",
-    "      \n",
-    "    Returns:\n",
-    "      np.ndarray: Resampled data array.\n",
-    "                  For univariate data, shape (sample_length, 1).\n",
-    "                  For multivariate data, shape (sample_length, n_series).\n",
-    "    \"\"\"\n",
-    "    # If data is 1D, reshape it to 2D\n",
-    "    if data.ndim == 1:\n",
-    "        n_obs = data.shape[0]\n",
-    "        n_series = 1\n",
-    "        data2 = np.empty((n_obs, 1), dtype=data.dtype)\n",
-    "        for i in range(n_obs):\n",
-    "            data2[i, 0] = data[i]\n",
-    "    else:\n",
-    "        n_obs, n_series = data.shape\n",
-    "        data2 = data\n",
+    "    This function performs stationary bootstrap resampling on an Nx2 array of return series.\n",
     "\n",
-    "    # Prepare the output array\n",
-    "    sample = np.empty((sample_length, n_series), dtype=data.dtype)\n",
-    "    accept = 1 / m \n",
-    "    sample_index = np.random.randint(0, n_obs)\n",
-    "    \n",
+    "    Parameters:\n",
+    "    data (np.ndarray): The input data array with shape (N, 2), where N is the number of time points\n",
+    "                       and each column is a return series.\n",
+    "    m (float): The average block length.\n",
+    "    sample_length (int): The length of the resampled output.\n",
+    "\n",
+    "    Returns:\n",
+    "    np.ndarray: The resampled data array with shape (sample_length, 2).\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Calculate the acceptance probability\n",
+    "    accept = 1 / m\n",
+    "    data_length = data.shape[0]\n",
+    "\n",
+    "    # Initialize the starting index for the sample\n",
+    "    sample_index = np.random.randint(0, data_length)\n",
+    "    sample = np.zeros((sample_length, 2))\n",
+    "\n",
+    "    # Loop through each sample point\n",
     "    for i_sample in range(sample_length):\n",
     "        # Decide whether to continue the current block or start a new one\n",
     "        if np.random.uniform(0, 1) >= accept:\n",
     "            sample_index += 1\n",
-    "            if sample_index >= n_obs:\n",
-    "                sample_index = 0  # Wrap around if necessary\n",
+    "            # Wrap around if the index exceeds the data length\n",
+    "            if sample_index >= data_length:\n",
+    "                sample_index = 0\n",
     "        else:\n",
-    "            sample_index = np.random.randint(0, n_obs)\n",
-    "        \n",
-    "        # Assign the entire row to the sample\n",
-    "        for j in range(n_series):\n",
-    "            sample[i_sample, j] = data2[sample_index, j]\n",
-    "    \n",
-    "    return sample\n"
+    "            # Start a new block with a random index\n",
+    "            sample_index = np.random.randint(0, data_length)\n",
+    "\n",
+    "        # Assign the selected row (both series) to the sample\n",
+    "        sample[i_sample, :] = data[sample_index, :]\n",
+    "\n",
+    "    return sample"
    ]
   },
   {
@@ -315,7 +310,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.1"
   }
  },
