modified:   Code/.DS_Store 	modified:   Code/11_volatility_managed_portfolios.ipynb 	modified:   Code/99_functions.ipynb 	new file:   Code/Appendix_GMV.ipynb 	modified:   Code/Appendix_splitting_periods.ipynb 	new file:   Code/Appendix_using_variance.ipynb 	new file:   Code/Appendix_with_short_selling.ipynb 	new file:   Code/Apppendix_shrinkage.ipynb 	new file:   Code/Plots/cumulrolling_sharpe_ratio_ptfs.png

--- a/Code/99_functions.ipynb
+++ b/Code/99_functions.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ptf_weights(ret, negative=True, type=\"MVP\", target=0, rf=0, gamma=1, wanted_weight=\"tangency\", max_weight = 999):\n",
+    "def ptf_weights(ret, negative=True, type=\"MVP\", target=0, rf=0, gamma=1, wanted_weight=\"tangency\", max_weight = 999, shrinkage=False):\n",
     "    \"\"\"\n",
     "    This function calculates the weights of the Minimum Variance Portfolio (MVP) or the Global Minimum Variance Portfolio (GMV).\n",
     "\n",
@@ -31,11 +31,18 @@
     "\n",
     "    \"\"\"\n",
     "\n",
+    "    from sklearn.covariance import LedoitWolf\n",
+    "\n",
     "    # Calculate the covariance matrix\n",
     "    V = np.array(ret.cov())\n",
     "\n",
     "    # Calculate the inverse of the covariance matrix\n",
     "    Vinverse = np.linalg.inv(V)\n",
+    "\n",
+    "    # Shrink the covariance matrix\n",
+    "    if shrinkage:\n",
+    "        V = LedoitWolf().fit(ret).covariance_\n",
+    "        Vinverse = np.linalg.inv(V)\n",
     "\n",
     "    # Computing the vector of ones\n",
     "    ones = np.ones((len(V),1))\n",
